# Mockl_class

./: cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/Lab/: gradio_app.py
{{cookiecutter.project_name}}/Lab/config/: config.yaml
