[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "*"
hydra-core = "*"
gradio = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
